[gd_scene load_steps=14 format=3 uid="uid://ckjo1flpk6cyw"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_23irw"]
[ext_resource type="PackedScene" uid="uid://cbv1drvhlkirr" path="res://scenes/pointer.tscn" id="2_0fjou"]
[ext_resource type="PackedScene" uid="uid://bum12kke1fy0l" path="res://scenes/note.tscn" id="3_x7au0"]
[ext_resource type="FontFile" uid="uid://bhx6aq6fsp3bi" path="res://instruction_font.tres" id="4_63s3l"]
[ext_resource type="Texture2D" uid="uid://cxsp7jlidq1nt" path="res://Music-staff.png" id="5_dldts"]
[ext_resource type="Texture2D" uid="uid://d4egegdc4orhv" path="res://listen.png" id="6_vd3uy"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6l6um"]
blend_mode = 1

[sub_resource type="Shader" id="Shader_4msls"]
resource_local_to_scene = true
code = "shader_type canvas_item;
uniform vec4 color: source_color;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	COLOR.rgb = color.rgb;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3go28"]
resource_local_to_scene = true
shader = SubResource("Shader_4msls")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="Shader" id="Shader_x83m4"]
resource_local_to_scene = true
code = "shader_type canvas_item;
uniform vec4 color: source_color;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	COLOR.rgb = color.rgb;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_64de8"]
resource_local_to_scene = true
shader = SubResource("Shader_x83m4")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_aaadu"]
offsets = PackedFloat32Array(0, 0.11)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wjeh1"]
gradient = SubResource("Gradient_aaadu")

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_23irw")
tempo = 85.0
background_color_listen = Color(0.228216, 0.190589, 0.451947, 1)
background_color_play = Color(0.556863, 0, 1, 1)

[node name="Pointer" parent="." instance=ExtResource("2_0fjou")]
visible = false
position = Vector2(-300, 209)

[node name="Pointer_AI" parent="." instance=ExtResource("2_0fjou")]
visible = false
self_modulate = Color(1, 1, 0, 1)
material = SubResource("CanvasItemMaterial_6l6um")
position = Vector2(-600, 209)
type = "teacher"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, 2.08165e-12)
zoom = Vector2(0.8, 0.8)

[node name="Notes" type="Node2D" parent="."]

[node name="Left Pole" parent="Notes" instance=ExtResource("3_x7au0")]
visible = false
modulate = Color(1, 1, 1, 0.282353)
material = SubResource("ShaderMaterial_3go28")
position = Vector2(-300, 2.08165e-12)

[node name="Right Pole" parent="Notes" instance=ExtResource("3_x7au0")]
visible = false
modulate = Color(1, 1, 1, 0.282353)
material = SubResource("ShaderMaterial_64de8")
position = Vector2(1200, 2.08165e-12)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PointsText" type="Label" parent="HUD"]
offset_right = 380.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50
text = "Points: 0"
autowrap_mode = 3

[node name="Instruction" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -86.0
offset_right = 167.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_63s3l")
theme_override_font_sizes/font_size = 50
text = "Listen!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Music-staff" type="Sprite2D" parent="."]
position = Vector2(602.566, -58)
scale = Vector2(9.81566, 2.77)
texture = ExtResource("5_dldts")

[node name="Sprite2D" type="Sprite2D" parent="Music-staff"]
z_index = -1
position = Vector2(-3.36871, 0.180509)
scale = Vector2(5.05092, 1.48353)
texture = SubResource("GradientTexture2D_wjeh1")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.556863, 0, 1, 1)

[node name="BeatOverlay" type="ColorRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.0196078)

[node name="Listen" type="Sprite2D" parent="."]
position = Vector2(500, 201)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_vd3uy")
